data/derived/sp14/progs/unify/prog1910.ml.out
Characters 109-146:
  else (loop (input / 10))::[(input mod 10)]
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
